--- a/docker_maven2/Dockerfile
+++ b/docker_maven2/Dockerfile
@@ -2,6 +2,8 @@ FROM centos
 
 RUN yum install -y wget
 
-RUN wget  http://www-eu.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.tar.gz 
+RUN wget -O -  http://www-eu.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.tar.gz | tar -xvzf -
 
-RUN tar -xvzf /apache-maven-3.3.9-bin.tar.gz
+#RUN tar -xvzf /apache-maven-3.3.9-bin.tar.gz
+
+#RUN rm -f /apache-maven-3.3.9-bin.tar.gz
