--- a/docker_maven3/Dockerfile
+++ b/docker_maven3/Dockerfile
@@ -1,5 +1,6 @@
 FROM centos
 
-COPY apache-maven-3.3.9-bin.tar.gz /.
+#COPY apache-maven-3.3.9-bin.tar.gz /.
+COPY apache-maven-3.3.9 /.
 
-RUN tar -xvzf /apache-maven-3.3.9-bin.tar.gz
+#RUN tar -xvzf /apache-maven-3.3.9-bin.tar.gz
